// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> Background color handling handles a Theme-UI background color 1`] = `
.emotion-0 {
  background-color: var(--theme-ui-colors-primary,rgb(255,113,99));
  padding: 6px 6px 6px 6px;
}

<div
  class="emotion-0"
>
  Test Box
</div>
`;

exports[`<Box /> Background color handling handles a Theme-UI background color scale 1`] = `
.emotion-0 {
  background-color: var(--theme-ui-colors-grays-3,rgb(89,103,113));
  padding: 6px 6px 6px 6px;
}

<div
  class="emotion-0"
>
  Test Box
</div>
`;

exports[`<Box /> Border color handling (shorthand): handles a Theme-UI shorthand border color 1`] = `
.emotion-0 {
  border-color: var(--theme-ui-colors-primary,rgb(255,113,99));
  padding: 6px 6px 6px 6px;
}

<div
  class="emotion-0"
>
  Test Box
</div>
`;

exports[`<Box /> Border color handling (shorthand): handles a Theme-UI shorthand border color scale 1`] = `
.emotion-0 {
  border-color: var(--theme-ui-colors-corals-1,rgb(229,85,78));
  padding: 6px 6px 6px 6px;
}

<div
  class="emotion-0"
>
  Test Box
</div>
`;

exports[`<Box /> Border color handling (top | horizontal | bottom):  handles a Theme-UI triple border color scale 1`] = `
.emotion-0 {
  border-color: var(--theme-ui-colors-whites-2,rgb(240,240,240)) var(--theme-ui-colors-blacks-1,rgb(51,51,51)) var(--theme-ui-colors-secondary,rgb(229,85,78)) var(--theme-ui-colors-blacks-1,rgb(51,51,51));
  padding: 6px 6px 6px 6px;
}

<div
  class="emotion-0"
>
  Test Box
</div>
`;

exports[`<Box /> Border color handling (top | right | bottom | left):  handles a Theme-UI triple border color scale 1`] = `
.emotion-0 {
  border-color: var(--theme-ui-colors-whites-2,rgb(240,240,240)) var(--theme-ui-colors-blacks-1,rgb(51,51,51)) var(--theme-ui-colors-grays-0,rgb(222,223,224)) var(--theme-ui-colors-corals-1,rgb(229,85,78));
  padding: 6px 6px 6px 6px;
}

<div
  class="emotion-0"
>
  Test Box
</div>
`;

exports[`<Box /> Border color handling (vertical | horizontal):  handles a Theme-UI tuple border color 1`] = `
.emotion-0 {
  border-color: var(--theme-ui-colors-primary,rgb(255,113,99)) var(--theme-ui-colors-secondary,rgb(229,85,78)) var(--theme-ui-colors-primary,rgb(255,113,99)) var(--theme-ui-colors-secondary,rgb(229,85,78));
  padding: 6px 6px 6px 6px;
}

<div
  class="emotion-0"
>
  Test Box
</div>
`;

exports[`<Box /> Border color handling (vertical | horizontal):  handles a Theme-UI tuple border color scale 1`] = `
.emotion-0 {
  border-color: var(--theme-ui-colors-corals-1,rgb(229,85,78)) var(--theme-ui-colors-secondary,rgb(229,85,78)) var(--theme-ui-colors-corals-1,rgb(229,85,78)) var(--theme-ui-colors-secondary,rgb(229,85,78));
  padding: 6px 6px 6px 6px;
}

<div
  class="emotion-0"
>
  Test Box
</div>
`;
